# apps/wanaku-router-backend/src/main/webui/openapi.yaml
@@ -877,12 +877,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -900,12 +894,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove By Name
       tags:
       - Data Stores Resource
@@ -926,12 +914,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: List Or Get By Name
       tags:
       - Data Stores Resource
@@ -949,12 +931,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add
@@ -974,12 +950,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseInteger"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove If
       tags:
       - Data Stores Resource
@@ -997,12 +967,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove By Id
       tags:
       - Data Stores Resource
@@ -1020,12 +984,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get By Id
       tags:
       - Data Stores Resource
@@ -1059,12 +1017,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add Forward
@@ -1090,12 +1042,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -1148,12 +1094,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Refresh
       tags:
       - Forwards Resource
@@ -1394,12 +1334,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -1417,12 +1351,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Prompts Resource
@@ -1434,12 +1362,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListPromptReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: List
       tags:
       - Prompts Resource
@@ -1457,12 +1379,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponsePromptReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add
@@ -1483,12 +1399,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponsePromptReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add With Payload
@@ -1509,12 +1419,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponsePromptReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get By Name
       tags:
       - Prompts Resource
@@ -1532,12 +1436,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListResourceReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: List
       tags:
       - Resources Resource
@@ -1555,12 +1453,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseResourceReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Expose
@@ -1581,12 +1473,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseResourceReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Expose With Payload
@@ -1612,12 +1498,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -1636,12 +1516,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Resources Resource
@@ -1659,12 +1533,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseResourceReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get By Name
       tags:
       - Resources Resource
@@ -1683,12 +1551,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Deploy
@@ -1708,12 +1570,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Download
       tags:
       - Service Catalog Resource
@@ -1731,12 +1587,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringObject"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get
       tags:
       - Service Catalog Resource
@@ -1758,12 +1608,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDeploymentInstructions"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get Deployment Instructions
       tags:
       - Service Catalog Resource
@@ -1781,12 +1625,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListMapStringObject"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: List
       tags:
       - Service Catalog Resource
@@ -1803,12 +1641,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Service Catalog Resource
@@ -1827,12 +1659,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Deploy
@@ -1852,12 +1678,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Download
       tags:
       - Service Template Resource
@@ -1875,12 +1695,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringObject"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get
       tags:
       - Service Template Resource
@@ -1899,12 +1713,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseDataStore"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Instantiate
@@ -1941,12 +1749,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringMapStringString"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get Properties
       tags:
       - Service Template Resource
@@ -1963,12 +1765,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Service Template Resource
@@ -1986,12 +1782,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseInteger"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove If
       tags:
       - Tools Resource
@@ -2008,12 +1798,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListToolReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: List
       tags:
       - Tools Resource
@@ -2031,12 +1815,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseToolReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add
@@ -2057,12 +1835,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseToolReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add With Payload
@@ -2088,12 +1860,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -2112,12 +1878,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Tools Resource
@@ -2135,12 +1895,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseToolReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Get By Name
       tags:
       - Tools Resource
@@ -2172,12 +1926,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringString"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Add
@@ -2206,12 +1954,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringString"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
         "400":
           description: Bad Request
       summary: Update
@@ -2230,12 +1972,6 @@ paths:
           content:
             application/json:
               schema: {}
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Remove
       tags:
       - Toolset Repos Resource
@@ -2254,12 +1990,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseMapStringObject"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Browse
       tags:
       - Toolset Repos Resource
@@ -2283,12 +2013,6 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/WanakuResponseListToolReference"
-        "500":
-          description: Wanaku error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/WanakuResponse"
       summary: Fetch Toolset
       tags:
       - Toolset Repos Resource
